# bachelor-thesis

./: .gitignore  Cargo.toml  build.rs  justfile
results/baseline/baseline_n10_random/: global_stats_baseline_n10_random_seed123456789.txt  global_stats_baseline_n10_random_seed123456790.txt  global_stats_baseline_n10_random_seed123456791.txt  global_stats_baseline_n10_random_seed123456792.txt  global_stats_baseline_n10_random_seed123456793.txt
results/baseline/baseline_n10_ring/: global_stats_baseline_n10_ring_seed123456789.txt  global_stats_baseline_n10_ring_seed123456790.txt  global_stats_baseline_n10_ring_seed123456791.txt  global_stats_baseline_n10_ring_seed123456792.txt  global_stats_baseline_n10_ring_seed123456793.txt
results/baseline/baseline_n200_random/: global_stats_baseline_n200_random_seed123456789.txt  global_stats_baseline_n200_random_seed123456790.txt  global_stats_baseline_n200_random_seed123456791.txt  global_stats_baseline_n200_random_seed123456792.txt  global_stats_baseline_n200_random_seed123456793.txt
scripts/: create_accuracy_graph.py  create_node_accuracy_graph.py  extract_baseline_accuracy.py  rb.ps1  run_wsl.sh
src/: lib.rs  main.rs
src/args/: args.rs
src/attack/: attack.rs
src/config/: config.rs
src/defense/: defense.rs
src/logging/: colors.rs  io.rs  log.rs  mod.rs
src/ml/: aggregator.rs  dataset.rs  mod.rs  model.rs
src/network/: communication.rs  graph.rs  mixing_matrix.rs  mod.rs  reputation.rs
src/node/: mod.rs  node.rs  stats.rs  visualization.rs
src/simulation/: simulation.rs
(+5078 files in other folders)
