[package]
name = "repository"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.5.60", features = [ "derive" ] }
once_cell = "1.21.3"
rand = "0.10.0"
rand_distr = "0.6.0"
rayon = "1.11.0"
tch = { version = "0.23.0", features = [ "download-libtorch" ] }

[profile.release]
debug = true
